python/extractor/tests/syntax-error/error.py
This is a syntax error!
